modification sur branche Bastien

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8>
 <title>Page accueil</title>
 </head>
 <body>
 <h1>Bonjour</h1>
-<p>Page html avec github</p>
+<p>Page html avec github depuis branche Bastien</p>
 </body>
 </html>
